--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "prettier-plugin-tailwindcss": "^0.5.1",
     "prisma": "^5.1.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "bun-types": "latest"
   },
   "ct3aMetadata": {
     "initVersion": "7.22.0"
-  }
+  },
+  "module": "index.ts",
+  "type": "module"
 }
